--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
     <nav class="menu" tabindex="0">
         <div class="smartphone-menu-trigger"></div>
         <header class="avatar">
-            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" />
-            <h2>John D.</h2>
+            <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg"
+            id="profile-image1">
+            <h2 id="full_Name"></h2>
+              <!-- <h4 style="color:#00b1b1;" ></h4></span> -->
         </header>
         <ul>
 
@@ -321,7 +323,7 @@
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div>
-                                            <select id="ListNotes_category1"
+                                            <select id="ListNotes_category"
                                                 class="form-control cursor form-select select-category"
                                                 style="height: calc(3.25rem + 2px);">
                                                 <option selected>No Categories</option>
@@ -343,21 +345,17 @@
                                     tôi
                                     sẽ
                                     giúp bạn
-
-
-
-
                                     <!-- Danh sách các nhiệm vụ mới nhất-->
                                     <h5>Nhiệm vụ gần đây</h5>
                                     <h6 id=aaa></h6>
                             </div>
                             <hr>
                         </div>
-
-                        <div id="name_notes" class="row">
-
-                        </div>
                     </div>
+                    <div id="name_notes" class="row">
+
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -395,6 +393,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-analytics.js"></script>
 
 
 
@@ -434,6 +433,10 @@
     <link rel="stylesheet" href="homepage/css/add-note.css">
     <!-- <link rel="stylesheet" href="assets/css/menu.css"> -->
     <script src="assets/js/menu.js"></script>
+    <script src="assets/moment.js"></script>
+    <script src="assets/moment-with-locales.js"></script>
+    <script src="NewNote/js/alarm.js"></script>
+
 </body>
 
 </html>
