--- a/index.html
+++ b/index.html
@@ -302,6 +302,18 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group col-md-12">
+                                <p>Là nơi giúp bạn lưu lại những ghi chú nhiệm vụ hằng ngày</p>
+                                <p> Bạn là một sinh viên, bạn đã đi làm, bạn thường hay quên những thứ hằng ngày. Chúng
+                                    tôi
+                                    sẽ
+                                    giúp bạn
+                                    <!-- Danh sách các nhiệm vụ mới nhất-->
+                                    <h5>Nhiệm vụ gần đây</h5>
+                                    <h6 id=aaa></h6>
+                            </div>
+                        </div>
                         <div class="col-md-4">
 
                             <div class="sidebar-menu">
@@ -348,21 +360,13 @@
                             </div>
                         </div>
 
-                        <div class="col-md-6">
-                            <div class="form-group col-md-12">
-                                <p>Là nơi giúp bạn lưu lại những ghi chú nhiệm vụ hằng ngày</p>
-                                <p> Bạn là một sinh viên, bạn đã đi làm, bạn thường hay quên những thứ hằng ngày. Chúng
-                                    tôi
-                                    sẽ
-                                    giúp bạn
-                                    <!-- Danh sách các nhiệm vụ mới nhất-->
-                                    <h5>Nhiệm vụ gần đây</h5>
-                                    <h6 id=aaa></h6>
-                            </div>
-                            <hr>
-                        </div>
+                        <hr>
+
                     </div>
+                    <hr>
+
                     <div id="load" class="row">
+
                         <!-- <div class="col-md-8">
                             <div id="name_notes" class="row">
 
@@ -427,6 +431,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-messaging.js"></script>
 
 
 
@@ -471,6 +476,7 @@
     <script src="assets/moment-with-locales.js"></script>
     <script src="NewNote/js/alarm.js"></script>
     <script src="task/task.js"></script>
+    <script src="notification.js"></script>
 
 </body>
 
