--- a/show_not.html
+++ b/show_not.html
@@ -1,9 +1,10 @@
-<div class="col-md-8">
+
+<div class="col-md-8" style="margin-left: 10px;">
     <div id="name_notes" class="row">
 
     </div>
 </div>
-<div class="col-md-4">
+<div class="col-md-3">
 
     <h1 class="title-task">Your Task</h1>
 
