--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <!-- <link rel="stylesheet" href="assets/css/Login.css"> -->
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|PT+Serif&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|PT+Serif|Shadows+Into+Light&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|PT+Serif|Satisfy|Shadows+Into+Light&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|PT+Serif|Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|PT+Serif|Satisfy|Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="assets\css\index1.css" />
@@ -38,21 +35,24 @@
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
 
 </head>
 
-<body>
+<body style="font-family: 'Oswald', sans-serif;">
     <nav class="menu" tabindex="0">
         <div class="smartphone-menu-trigger"></div>
         <header class="avatar">
-            <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg"
-                id="profile-image1">
+            <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1">
             <h2 id="full_Name"></h2>
             <!-- <h4 style="color:#00b1b1;" ></h4></span> -->
         </header>
         <ul>
 
-            <li tabindex="0" class="icon-category"><span>List Note</span></li>
+            <li tabindex="0" class="icon-category" onclick="ListNotes()"><span>List Note</span></li>
             <li tabindex="0" class="icon-customers"><span>Customers</span></li>
             <li tabindex="0" class="icon-users" onclick="openProfile()"><span>Users</span></li>
             <li tabindex="0" id="open_profile" class="icon-settings"><span>Settings</span></li>
@@ -88,9 +88,7 @@
                                                 <!-- <a>Tuần</a> -->
                                                 <div class="location-form">
                                                     <div class="inputlocation">
-                                                        <input id="location_Name" class="input1" type="text"
-                                                            placeholder="add new location" aria-label="add new location"
-                                                            aria-describedby="button-addon2">
+                                                        <input id="location_Name" class="input1" type="text" placeholder="add new location" aria-label="add new location" aria-describedby="button-addon2">
                                                     </div>
                                                     <div class="addlocation">
                                                         <i class="material-icons button " onclick="">house</i>
@@ -107,8 +105,7 @@
 
                     </div>
                 </div>
-                <textarea id="NewNotes_content" type="ghichu" name="message" placeholder="What are you doing..."
-                    style="width:auto; height:auto;"></textarea>
+                <textarea id="NewNotes_content" type="ghichu" name="message" placeholder="What are you doing..." style="width:auto; height:auto;"></textarea>
                 <br>
                 <div class="custom-file">
                     <input type="file" value="upload" id="fileButton" />
@@ -117,8 +114,7 @@
                 <div class="form-row row">
                     <div class="form-group col-md-4">
                         <label class="text-category" for="danhmuc">Category</label>
-                        <select id="ListNotes_category1" class="form-control cursor form-select select-category"
-                            style="height: calc(3.25rem + 2px);">
+                        <select id="ListNotes_category1" class="form-control cursor form-select select-category" style="height: calc(3.25rem + 2px);">
                             <option selected>No Categories</option>
                         </select>
                     </div>
@@ -145,10 +141,8 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button onclick="writeNotesData()" type="button" style="width: 70px;height: 50px;"
-                        class="btn btn-outline-info">Add</button>
-                    <button type="button" style="width: 70px;height: 50px;" class="btn btn-outline-info"
-                        data-dismiss="modal">Close</button>
+                    <button onclick="writeNotesData()" type="button" style="width: 70px;height: 50px;" class="btn btn-outline-info">Add</button>
+                    <button type="button" style="width: 70px;height: 50px;" class="btn btn-outline-info" data-dismiss="modal">Close</button>
                 </div>
 
             </div>
@@ -175,9 +169,7 @@
                                     <div class="col-sm-6">
                                         <div align="center">
 
-                                            <img alt="User Pic" onclick="uploadImg()"
-                                                src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg"
-                                                id="profile-image1" class="img-circle img-responsive">
+                                            <img alt="User Pic" onclick="uploadImg()" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
                                             <input id="profile-image-upload" class="hidden" type="file">
                                             <label for="profile-image-upload" style="color:#999;">click here to change
                                                 profile image</label>
@@ -190,7 +182,8 @@
                                         <!-- /input-group -->
                                     </div>
                                     <div class="col-sm-6">
-                                        <h4 style="color:#00b1b1;" id="full_Name"></h4></span>
+                                        <h4 style="color:#00b1b1;" id="full_Name"></h4>
+                                        </span>
                                         <span>
                                             <p id="national"></p>
                                         </span>
@@ -198,27 +191,23 @@
                                     <div class="clearfix"></div>
                                     <hr style="margin:5px 0 5px 0;">
 
-                                    <div class="col-sm-5 col-xs-6 tital ">First Name:</div><input id="first_Name"
-                                        class="col-sm-7 col-xs-6 " placeholder="First Name">
+                                    <div class="col-sm-5 col-xs-6 tital ">First Name:</div><input id="first_Name" class="col-sm-7 col-xs-6 " placeholder="First Name">
                                     <div class="clearfix"></div>
                                     <div class="bot-border"></div>
 
 
-                                    <div class="col-sm-5 col-xs-6 tital ">Last Name:</div><input id="last_Name"
-                                        class="col-sm-7 col-xs-6 " placeholder="Last Name">
+                                    <div class="col-sm-5 col-xs-6 tital ">Last Name:</div><input id="last_Name" class="col-sm-7 col-xs-6 " placeholder="Last Name">
                                     <div class="clearfix"></div>
                                     <div class="bot-border"></div>
 
 
-                                    <div class="col-sm-5 col-xs-6 tital ">Date Of Birth:</div><input
-                                        class="col-sm-7 col-xs-6 " placeholder="Date Of Birth">
+                                    <div class="col-sm-5 col-xs-6 tital ">Date Of Birth:</div><input class="col-sm-7 col-xs-6 " placeholder="Date Of Birth">
 
                                     <div class="clearfix"></div>
                                     <div class="bot-border"></div>
 
 
-                                    <div class="col-sm-5 col-xs-6 tital ">Nationality:</div><input id="nationality"
-                                        class="col-sm-7 col-xs-6 " placeholder="Nationality">
+                                    <div class="col-sm-5 col-xs-6 tital ">Nationality:</div><input id="nationality" class="col-sm-7 col-xs-6 " placeholder="Nationality">
 
                                     <div class="clearfix"></div>
                                     <div class="bot-border"></div>
@@ -268,8 +257,7 @@
                                     <div class="clearfix"></div>
                                     <div class="bot-border"></div>
                                     <div class="col-sm-2 col-xs-2 tital">
-                                        <button onclick="saveIn()" class="btn btn-primary"
-                                            data-dismiss="modal">Update</button>
+                                        <button onclick="saveIn()" class="btn btn-primary" data-dismiss="modal">Update</button>
                                     </div>
                                     <div class="col-sm-2 col-xs-2 tital">
                                         <button class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -297,18 +285,15 @@
     <main class="page-content">
         <div class="container-fluid">
 
-            <h2 class="title-align">T-NoteList</h2>
+            <h2 class="title-align tracking-in-expand ">T-NoteList</h2>
             <hr>
             <div class="row">
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="form-group col-md-12">
+                            <div class="form-group col-md-12" style="font-size: 18; font-family: 'Yeon Sung', cursive;">
                                 <p>Là nơi giúp bạn lưu lại những ghi chú nhiệm vụ hằng ngày</p>
-                                <p> Bạn là một sinh viên, bạn đã đi làm, bạn thường hay quên những thứ hằng ngày. Chúng
-                                    tôi
-                                    sẽ
-                                    giúp bạn
+                                <p> Bạn là một sinh viên, bạn đã đi làm, bạn thường hay quên những thứ hằng ngày. Chúng tôi sẽ giúp bạn
                                     <!-- Danh sách các nhiệm vụ mới nhất-->
                                     <h5>Nhiệm vụ gần đây</h5>
                                     <h6 id=aaa></h6>
@@ -322,16 +307,13 @@
                                         <!-- <a>Tuần</a> -->
                                         <div class="khung">
                                             <div class="inputcategory">
-                                                <input id="category_Name" class="input1" type="text"
-                                                    placeholder="add new category" aria-label="addnewcategory"
-                                                    aria-describedby="button-addon2">
+                                                <input id="category_Name" class="input1" type="text" placeholder="add new category" aria-label="addnewcategory" aria-describedby="button-addon2">
                                             </div>
                                             <div class="editcategory">
                                                 <i class="material-icons button" onclick="addnewcategory()">add_box</i>
                                             </div>
                                             <div class="deletecategory">
-                                                <i class="material-icons button "
-                                                    onclick="deleteCategory()">delete_outline</i>
+                                                <i class="material-icons button " onclick="deleteCategory()">delete_outline</i>
                                             </div>
                                         </div>
                                     </ul>
@@ -345,16 +327,13 @@
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div>
-                                            <select id="ListNotes_category"
-                                                class="form-control cursor form-select select-category"
-                                                style="height: calc(3.25rem + 2px);" onchange="Category_select(this)">
+                                            <select id="ListNotes_category" class="form-control cursor form-select select-category" style="height: calc(3.25rem + 2px);" onchange="Category_select(this)">
                                                 <option selected>No Categories</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-md-2 select-category-del">
-                                        <i class="material-icons button icondeleteslect"
-                                            onclick="deleteCategoryInSelect()">delete_outline</i>
+                                        <i class="material-icons button icondeleteslect" onclick="deleteCategoryInSelect()">delete_outline</i>
                                     </div>
                                 </div>
                             </div>
@@ -364,31 +343,11 @@
 
                     </div>
                     <hr>
+                    <!-- <div class="row"> -->
+                    <div id="listNotes">
 
-                    <div id="load" class="row">
-
-                        <!-- <div class="col-md-8">
-                            <div id="name_notes" class="row">
-
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-
-                            <h1 class="title-task">Your Task</h1>
-
-                            <div class="content">
-
-                                <form id="add-cafe-form">
-                                    <input type="text" name="name" placeholder="Cafe name">
-                                    <input type="text" name="city" placeholder="Cafe city">
-                                    <button>Add Cafe</button>
-                                </form>
-
-                                <ul id="cafe-list"></ul>
-
-                            </div>
-                        </div> -->
                     </div>
+                    <!-- <button id="deletenote" class="btn btn-info">sdsd</button> -->
 
 
                 </div>
@@ -411,8 +370,7 @@
             <div data-toggle="tooltip" data-placement="left" id="add" class="add_note">
                 <!--button add new post-->
 
-                <button class="btn btn-info btn-size-add-del material-icons" data-toggle="modal"
-                    data-target="#myModal">post_add</button>
+                <button class="btn btn-info btn-size-add-del material-icons" data-toggle="modal" data-target="#myModal">post_add</button>
 
 
 
@@ -455,12 +413,10 @@
     </script>
     <!-- <script src="https://www.gstatic.com/firebase/init.js"></script> -->
     <!-- <script src="/app.js"></script> -->
+
     <script src="/db.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="login-register-master/signin.js"></script>
     <script src="login-register-master/notUser.js"></script>
@@ -470,14 +426,17 @@
     <link rel="stylesheet" href="homepage/css/show-category.css">
     <link rel="stylesheet" href="homepage/css/add-note.css">
     <link rel="stylesheet" href="task/task.css">
+    <link rel="stylesheet" href="homepage/css/ShowNoteCard.css">
+    <link rel="stylesheet" href="homepage/css/slogan.css">
+    <link rel="stylesheet" href="homepage/css/detailCard.css">
     <!-- <link rel="stylesheet" href="assets/css/menu.css"> -->
     <script src="assets/js/menu.js"></script>
     <script src="assets/moment.js"></script>
     <script src="assets/moment-with-locales.js"></script>
     <script src="NewNote/js/alarm.js"></script>
     <script src="task/task.js"></script>
-    <script src="notification.js"></script>
-
+    <script src="homepage/js/ShowNoteCard.js"></script>
+    <script src="homepage/js/list-menu.js"></script>
 </body>
 
 </html>
